examples/test/testpolicy9168.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9168
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key49: value32
      key7: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value37
          key13: value31
          key33: value19
      podSelector:
        matchLabels:
          key0: value2
          key21: value46
